--- a/{{ cookiecutter.repo_name }}/i18n/af.json
+++ b/{{ cookiecutter.repo_name }}/i18n/af.json
@@ -3,6 +3,6 @@
 		"authors": [
 			"Oesjaar"
 		]
-	}{% if cookiecutter.integration_add_example_special_page %},
+	}{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"helloworld": "Hello wêreld"{% endif %}
 }
