--- a/{{ cookiecutter.repo_name }}/i18n/hi.json
+++ b/{{ cookiecutter.repo_name }}/i18n/hi.json
@@ -1,6 +1,6 @@
 {
 	"@metadata": {
 		"authors": []
-	}{% if cookiecutter.integration_add_example_special_page %},
+	}{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"helloworld": "नमस्कारदुनिया"{% endif %}
 }
