--- a/{{ cookiecutter.repo_name }}/i18n/kk-cyrl.json
+++ b/{{ cookiecutter.repo_name }}/i18n/kk-cyrl.json
@@ -5,7 +5,7 @@
 		]
 	},
 	"{{ cookiecutter.i18n_prefix }}-desc": "Бұл мысал кеңейтілім",
-	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "{{ cookiecutter.repo_name }} кеңейтілімінің жерсіндіру файлына қош келдіңіз."{% if cookiecutter.integration_add_example_special_page %},
+	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "{{ cookiecutter.repo_name }} кеңейтілімінің жерсіндіру файлына қош келдіңіз."{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"{{ cookiecutter.i18n_prefix }}-helloworld": "Сәлем, әлем!",
 	"{{ cookiecutter.i18n_prefix }}-helloworld-intro": "{{ cookiecutter.repo_name }} кеңейтілімінің «Hello world» арнайы бетіне қош келдіңіз.",
 	"helloworld": "Сәлем, әлем!"{% endif %}
