--- a/{{ cookiecutter.repo_name }}/i18n/kn.json
+++ b/{{ cookiecutter.repo_name }}/i18n/kn.json
@@ -3,7 +3,7 @@
 		"authors": [
 			"Ananth subray"
 		]
-	}{% if cookiecutter.integration_add_example_special_page %},
+	}{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"{{ cookiecutter.i18n_prefix }}-helloworld": "ಹಲೋ ವರ್ಲ್ಡ್!",
 	"helloworld": "ಹಲೋ ವರ್ಲ್ಡ್"{% endif %}
 }
