--- a/{{ cookiecutter.repo_name }}/i18n/lus.json
+++ b/{{ cookiecutter.repo_name }}/i18n/lus.json
@@ -3,6 +3,6 @@
 		"authors": [
 			"RMizo"
 		]
-	}{% if cookiecutter.integration_add_example_special_page %},
+	}{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"helloworld": "HelloWorld"{% endif %}
 }
