--- a/{{ cookiecutter.repo_name }}/i18n/fa.json
+++ b/{{ cookiecutter.repo_name }}/i18n/fa.json
@@ -7,7 +7,7 @@
 		]
 	},
 	"{{ cookiecutter.i18n_prefix }}-desc": "این یک افزونهٔ نمونه است",
-	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "به پروندهٔ محلی‌سازی افزونهٔ بویلرپلیت خوش‌آمدید."{% if cookiecutter.integration_add_example_special_page %},
+	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "به پروندهٔ محلی‌سازی افزونهٔ بویلرپلیت خوش‌آمدید."{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"{{ cookiecutter.i18n_prefix }}-helloworld": "سلام دنیا!",
 	"helloworld": "سلام دنیا"{% endif %}
 }
