--- a/{{ cookiecutter.repo_name }}/i18n/he.json
+++ b/{{ cookiecutter.repo_name }}/i18n/he.json
@@ -6,6 +6,6 @@
 		]
 	},
 	"{{ cookiecutter.i18n_prefix }}-desc": "זאת היא הרחבה לדוגמה",
-	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "ברוכים הבאים לקובץ התרגום של ההרחבה {{ cookiecutter.repo_name }}."{% if cookiecutter.integration_add_example_special_page %},
+	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "ברוכים הבאים לקובץ התרגום של ההרחבה {{ cookiecutter.repo_name }}."{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"helloworld": "שלום־עולם"{% endif %}
 }
