--- a/{{ cookiecutter.repo_name }}/i18n/ht.json
+++ b/{{ cookiecutter.repo_name }}/i18n/ht.json
@@ -3,6 +3,6 @@
 		"authors": [
 			"Bfpage"
 		]
-	}{% if cookiecutter.integration_add_example_special_page %},
+	}{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"helloworld": "Bonjou mond"{% endif %}
 }
