--- a/{{ cookiecutter.repo_name }}/i18n/ja.json
+++ b/{{ cookiecutter.repo_name }}/i18n/ja.json
@@ -5,6 +5,6 @@
 		]
 	},
 	"{{ cookiecutter.i18n_prefix }}-desc": "これは拡張機能の例です",
-	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "{{ cookiecutter.repo_name }} 拡張機能の地域化ファイルにようこそ。"{% if cookiecutter.integration_add_example_special_page %},
+	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "{{ cookiecutter.repo_name }} 拡張機能の地域化ファイルにようこそ。"{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"helloworld": "HelloWorld"{% endif %}
 }
