--- a/{{ cookiecutter.repo_name }}/i18n/pms.json
+++ b/{{ cookiecutter.repo_name }}/i18n/pms.json
@@ -6,6 +6,6 @@
 		]
 	},
 	"{{ cookiecutter.i18n_prefix }}-desc": "Cost a l'é n'esempi d'estension",
-	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "Bin-ëvnù ant l'archivi ëd localisassion ëd l'estension {{ cookiecutter.repo_name }}."{% if cookiecutter.integration_add_example_special_page %},
+	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "Bin-ëvnù ant l'archivi ëd localisassion ëd l'estension {{ cookiecutter.repo_name }}."{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"helloworld": "CereaMond"{% endif %}
 }
