--- a/{{ cookiecutter.repo_name }}/i18n/pt.json
+++ b/{{ cookiecutter.repo_name }}/i18n/pt.json
@@ -6,7 +6,7 @@
 		]
 	},
 	"{{ cookiecutter.i18n_prefix }}-desc": "Esta é uma extensão exemplificativa",
-	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "Bem-vindo(a) ao ficheiro de localização da extensão exemplificativa {{ cookiecutter.repo_name }}."{% if cookiecutter.integration_add_example_special_page %},
+	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "Bem-vindo(a) ao ficheiro de localização da extensão exemplificativa {{ cookiecutter.repo_name }}."{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"{{ cookiecutter.i18n_prefix }}-helloworld": "Olá mundo!",
 	"{{ cookiecutter.i18n_prefix }}-helloworld-intro": "Bem-vindo(a) à página especial \"Olá mundo\" da extensão {{ cookiecutter.repo_name }}.",
 	"helloworld": "Olá mundo"{% endif %}
