--- a/{{ cookiecutter.repo_name }}/i18n/ru.json
+++ b/{{ cookiecutter.repo_name }}/i18n/ru.json
@@ -6,7 +6,7 @@
 		]
 	},
 	"{{ cookiecutter.i18n_prefix }}-desc": "Это пример расширения",
-	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "Добро пожаловать в файл локализации расширения {{ cookiecutter.repo_name }}."{% if cookiecutter.integration_add_example_special_page %},
+	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "Добро пожаловать в файл локализации расширения {{ cookiecutter.repo_name }}."{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"{{ cookiecutter.i18n_prefix }}-helloworld": "Привет, мир!",
 	"{{ cookiecutter.i18n_prefix }}-helloworld-intro": "Добро пожаловать на спецстраницу «Привет, мир!» расширения {{ cookiecutter.repo_name }}.",
 	"helloworld": "Привет, мир"{% endif %}
