--- a/{{ cookiecutter.repo_name }}/i18n/tl.json
+++ b/{{ cookiecutter.repo_name }}/i18n/tl.json
@@ -6,6 +6,6 @@
 		]
 	},
 	"{{ cookiecutter.i18n_prefix }}-desc": "Isa itong halimbawang dugtong",
-	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "Maligayang pagdating sa talaksan ng lokalisasyon ng dugtong na Platong Pakuluan."{% if cookiecutter.integration_add_example_special_page %},
+	"{{ cookiecutter.i18n_prefix }}-i18n-welcome": "Maligayang pagdating sa talaksan ng lokalisasyon ng dugtong na Platong Pakuluan."{% if cookiecutter.integration_add_example_special_page == 'y' %},
 	"helloworld": "Kumusta ka daigdig"{% endif %}
 }
